- Windows UNC path are parsed and now it can be clickable
- "Open selected text as url" option added in chat chat window (right click on selected text)
- "Overwrite existings file" and "Ask me" option added
- Fixed a bug in icon of default chat when a new message is arrived
- Fixed a bug in alert beep when a new message is arrived
- Fixed a bug on stay on top (windows)

BeeBEEP 3.0.5
- Added timestamp and datestamp to home activities (option - right click on text)
- Chat messages can be printed (all or selected)
- Image preview is added in non native File Dialog (native has by default)
- Added anonymous usage statistics (option)
- Added new edit option in add user manually dialog
- Added shortcut for broadcast action and send folder action
- Fixed a bug in add user manually dialog
- Find text in chat (right click on chat window)
- Fixed a bug on paste string on message edit when word completer is enabled
- Preview of chat message can be showed on tray notification (option)
- Nickname can be selected at each connection (option)
- Added save main window geometry option in view menu
- Auto search for new users every 15 seconds if the connected user list is empty

BeeBEEP 3.0.4
- Hive protocol added: BeeBEEPs tell each other the host address of the connected users. It can be disabled in beebeep.rc (option)
- Check for new version at startup (option)
- Use your name instead of you in the chat messages (option)
- Enable saving data. It can be disabled in beebeep.rc (option)
- Added datestamp to message (option)
- Fixed doubled url link in copy and paste from Chrome
- Enable broadcasting timer interval (option)

BeeBEEP 3.0.3
- Image preview is also showed when an upload is completed
- The multicast group can be specified as host address in beebeep.rc (option)
- Key Return can be disabled as shortcut to send chat message (option)
- Shortcut "Send chat message" added
- Spell checking can be enabled (thanks to HUNSPELL library)
- Word completer can be enabled (option)